metadata1/unpackaged/objects/Budget__c.object
<CustomObject>
    <fields>
        <fullName>ATI_Job__c</fullName>
        <label>Job</label>
        <referenceTo>ATI_Job__c</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Actual__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Actual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allocation_Overhead__c</fullName>
        <label>Overhead/Profit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5/5</fullName>
                </value>
                <value>
                    <fullName>6/6</fullName>
                </value>
                <value>
                    <fullName>7/7</fullName>
                </value>
                <value>
                    <fullName>8/8</fullName>
                </value>
                <value>
                    <fullName>9/9</fullName>
                </value>
                <value>
                    <fullName>10/10</fullName>
                </value>
                <value>
                    <fullName>10/5</fullName>
                </value>
                <value>
                    <fullName>0/0</fullName>
                    <isActive>false</isActive>
                    <label>0/0</label>
                </value>
                <value>
                    <fullName>1/1</fullName>
                    <isActive>false</isActive>
                    <label>1/1</label>
                </value>
                <value>
                    <fullName>2/2</fullName>
                    <isActive>false</isActive>
                    <label>2/2</label>
                </value>
                <value>
                    <fullName>3/3</fullName>
                    <isActive>false</isActive>
                    <label>3/3</label>
                </value>
                <value>
                    <fullName>4/4</fullName>
                    <isActive>false</isActive>
                    <label>4/4</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allocation_Percentage__c</fullName>
        <formula>CASE(Allocation_Overhead__c,  &quot;5/5&quot;, 1.05, &quot;6/6&quot;, 1.06, &quot;7/7&quot;, 1.07, &quot;8/8&quot;, 1.08, &quot;9/9&quot;, 1.09, &quot;10/10&quot;, 1.1, &quot;10/5&quot;, 1.5, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allocation Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Allocations__c</fullName>
        <label>Allocations (%)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved_Budget__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved Budget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BlankValue__c</fullName>
        <label>BlankValue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0/0</fullName>
                    <default>true</default>
                    <label>0/0</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_Count__c</fullName>
        <description>Used for counting the number of budgets on a job for reports.</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_Number_Incremental__c</fullName>
        <label>Budget Number Incremental</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_Status__c</fullName>
        <label>Budget Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted for Approval/Rejection</fullName>
                    <default>true</default>
                    <label>Not Submitted for Approval/Rejection</label>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_PDF_Version__c</fullName>
        <label>Current PDF Version</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Completion_Date__c</fullName>
        <formula>ATI_Job__r.Estimated_Completion_Date__c</formula>
        <inlineHelpText>To edit the date, please refer back to ATI Job.</inlineHelpText>
        <label>Estimated Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exclude_Tax_from_Total__c</fullName>
        <defaultValue>&quot;No&quot;</defaultValue>
        <label>Exclude Tax from Total</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GP_Goal__c</fullName>
        <label>GP Goal %</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>31</fullName>
                </value>
                <value>
                    <fullName>32</fullName>
                </value>
                <value>
                    <fullName>33</fullName>
                </value>
                <value>
                    <fullName>34</fullName>
                </value>
                <value>
                    <fullName>35</fullName>
                </value>
                <value>
                    <fullName>36</fullName>
                </value>
                <value>
                    <fullName>37</fullName>
                </value>
                <value>
                    <fullName>38</fullName>
                </value>
                <value>
                    <fullName>39</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>41</fullName>
                </value>
                <value>
                    <fullName>42</fullName>
                </value>
                <value>
                    <fullName>43</fullName>
                </value>
                <value>
                    <fullName>44</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Name_and_Number__c</fullName>
        <formula>ATI_Job__r.Name</formula>
        <label>Job Name and Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Overhead_Allocations__c</fullName>
        <formula>Overhead__c * (VALUE(TEXT(Allocations__c)))/ 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overhead Allocations</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Overhead_Profit_Sales_Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overhead/Profit Sales Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overhead__c</fullName>
        <description>Revenue * 10% if the 10/10 is checked. Calculated via code.</description>
        <label>Overhead</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_Version__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This gets updated via trigger (apexcode: BudgetFieldUpdate) when a new budget record is created.</description>
        <label>Previous Version</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Profit_Allocations__c</fullName>
        <formula>Profit__c * (VALUE(TEXT(Allocations__c))) / 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profit Allocations</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Profit__c</fullName>
        <description>Revenue * 10% if the 10/10 is checked. Calculated via code.</description>
        <label>Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Budgets_PM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regional_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Budgets_RegMgr</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reject_Budget__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reject Budget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rejected_Reason__c</fullName>
        <inlineHelpText>Place for comments when a budget is rejected.</inlineHelpText>
        <label>Rejected Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Allocations__c</fullName>
        <formula>If(Tax_Exempt__c = False,

(Sales_Tax__c * (VALUE(TEXT(Allocations__c))) / 100)+ Sales_Tax_with_Overhead__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Tax Allocations</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Percent__c</fullName>
        <label>Sales Tax Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Tax__c</fullName>
        <label>Sales Tax</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_with_Overhead__c</fullName>
        <formula>If( Overhead_Profit_Sales_Tax__c = True, ((Sales_Tax__c * Allocation_Percentage__c) * 2)- (Sales_Tax__c*2), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Tax with Overhead</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <formula>ATI_Job__r.Job_Start_Date__c</formula>
        <inlineHelpText>To edit the date, please refer back to ATI Job.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subtotal_Allocations__c</fullName>
        <label>Subtotal Allocations</label>
        <summarizedField>Budget_Line_Item__c.Allocation_Amount__c</summarizedField>
        <summaryForeignKey>Budget_Line_Item__c.Budget__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Subtotal_Revenue__c</fullName>
        <label>Subtotal Revenue</label>
        <summarizedField>Budget_Line_Item__c.Revenue__c</summarizedField>
        <summaryForeignKey>Budget_Line_Item__c.Budget__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tax_Exempt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Tax From Totals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Actual_Costs__c</fullName>
        <formula>Total_Allocations__c + Total_Subcontractor_bid__c + Total_In_House_Total__c + Total_Materials__c +  Total_Program_Fees_New__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Actual Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Allocations__c</fullName>
        <formula>IF(Tax_Exempt__c = FALSE, Subtotal_Allocations__c + Overhead_Allocations__c + Profit_Allocations__c + Sales_Tax_Allocations__c, Subtotal_Allocations__c + Overhead_Allocations__c + Profit_Allocations__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Allocations</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Budget_Goal__c</fullName>
        <label>Total Budget Goal</label>
        <summarizedField>Budget_Line_Item__c.Budget_Goal_Amount__c</summarizedField>
        <summaryForeignKey>Budget_Line_Item__c.Budget__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Gross_Profit__c</fullName>
        <formula>Total_Profit__c  /  Total_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Gross Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_In_House_Total__c</fullName>
        <label>Total In-House Total</label>
        <summarizedField>Budget_Line_Item__c.In_House_Total__c</summarizedField>
        <summaryForeignKey>Budget_Line_Item__c.Budget__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Materials__c</fullName>
        <label>Total Materials</label>
        <summarizedField>Budget_Line_Item__c.Materials__c</summarizedField>
        <summaryForeignKey>Budget_Line_Item__c.Budget__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Profit__c</fullName>
        <formula>Total_Revenue__c - Total_Actual_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Program_Fees_New__c</fullName>
        <formula>Total_Revenue__c * VALUE(TEXT(X3_Program_Fees__c)) / 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Program Fees (from Total Revenue)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Revenue__c</fullName>
        <formula>IF(AND(Tax_Exempt__c = FALSE,  Overhead_Profit_Sales_Tax__c = False) , Subtotal_Revenue__c + Overhead__c + Profit__c + Sales_Tax__c,
IF(AND(Tax_Exempt__c = False, Overhead_Profit_Sales_Tax__c = TRUE), Subtotal_Revenue__c + Overhead__c + Profit__c + Sales_Tax_Percent__c, 
Subtotal_Revenue__c + Overhead__c + Profit__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Subcontractor_bid__c</fullName>
        <label>Total Subcontractor bid</label>
        <summarizedField>Budget_Line_Item__c.Subcontractor_bid__c</summarizedField>
        <summaryForeignKey>Budget_Line_Item__c.Budget__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>X3_Program_Fees__c</fullName>
        <label>Program Fees (%)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Budget</label>
    <nameField>
        <label>Budget Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Budgets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Must_select_GP_goal</fullName>
        <active>false</active>
        <description>User must select a GP goal % above 0 to save budget (default is 0)</description>
        <errorConditionFormula>ISPICKVAL(GP_Goal__c,&quot;0&quot;)</errorConditionFormula>
        <errorMessage>GP Goal % must be greater than 0.</errorMessage>
    </validationRules>
</CustomObject>